--- a/app/src/main/res/layout/layout_adapter.xml
+++ b/app/src/main/res/layout/layout_adapter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="100">
@@ -8,28 +8,26 @@
 
     <TextView
         android:id="@+id/birdNameTextView"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:text="TextView1"
-        android:textColor="#000000"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_weight="50"/>
-
-    <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="50">
+        android:layout_weight="33.3"
+        android:gravity="start"
+        android:padding="10dp"
+        android:text="Bird name here"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#000000" />
 
-        <TextView
-            android:id="@+id/birdCountTextView"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:textColor="#919191"
-            android:text="TextView2" />
+    <TextView
+        android:id="@+id/birdCountTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="66.6"
+        android:gravity="start"
+        android:text="Found: #"
+        android:textAlignment="textStart"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="#424242" />
 
-    </LinearLayout>
 
 </LinearLayout>
